--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -10,7 +10,7 @@
      </div>
     <% end %>
 
-    <div class="form_photo_show">
+    <div class="photo_show">
       <%= image_tag(@entry.image.url) if @entry.image && @entry.image.url %>
     </div>
     <div class="form_photo">
