--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -139,7 +139,7 @@
                 <%= f.text_field :content, placeholder: 'コメントを追加...' %>
               </div>
               <div class="reply_form_submit">
-              <%= f.submit '投稿する', class: 'btn_submit' %>
+              <%= f.submit '投稿する', class: 'reply_btn_submit' %>
               </div>
             </div>
           <% end %>
