--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -177,7 +177,7 @@
               <%= f.hidden_field :entry_id, value: @entry.id %>
             </div>
             <div class="show_form_submit">
-              <%= f.submit '投稿する', class: 'btn_submit' %>
+              <%= f.submit '投稿する', class: 'reply_btn_submit' %>
             </div>
           <div>
         <% end %>
