--- a/app/views/entries/confirm.html.erb
+++ b/app/views/entries/confirm.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
-  <div class="confirm">
+<div class="confirm">
+  <div class="confirm_container">
     <h3>以下の内容で投稿してよろしいですか？</h3>
 
     <%= form_with(model: @entry, local: true) do |f| %>
-      <div class="confirm_image_area">
+      <div class="photo_show">
         <%= image_tag @entry.image.url if @entry.image && @entry.image.url %>
       </div>
       <div class="confirm_content_area">
@@ -12,12 +12,15 @@
         <%= f.hidden_field :image_cache %>
         <%= f.hidden_field :content %>
       </div>
-      <span class="btn_back">
-        <%= f.submit '戻る', name: 'back' %>
-      </span>
-      <span class="btn_send">
-        <%= f.submit '投稿' %>
-      </span>
+
+      <div class="confirm_button">
+        <span class="btn_back">
+          <%= f.submit '戻る', name: 'back', class: 'btn_submit' %>
+        </span>
+        <span class="btn_send">
+          <%= f.submit '投稿', class: 'btn_submit' %>
+        </span>
+      </div>
     <% end %>
   </div>
 </div>
