--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,37 +1,40 @@
 <div class="signup">
-  <div class="title_logo">
-    <img src="https://fontmeme.com/permalink/200109/23a93f3d238949f77b4e6ed79577bcc1.png" class="title_logo_image">
-  </div>
-  <h3>友達の写真や動画をチェックしよう</h3>
-  <%= form_with(model: @user, local: true, url: choose_new_or_edit) do |f| %>
-    <div class="signup_email">
-      <%= f.email_field :email, placeholder: 'メールアドレス' %>
+  <div class="signup_container">
+    <div class="signup_form">
+    <div class="title_logo">
+      <img src="https://fontmeme.com/permalink/200109/23a93f3d238949f77b4e6ed79577bcc1.png" class="title_logo_image">
     </div>
-    <div class="signup_name">
-      <%= f.text_field :name, placeholder: 'フルネーム' %>
-    </div>
-    <div class="signup_username">
-      <%= f.text_field :user_name, placeholder: 'ユーザーネーム' %>
-    </div>
-    <div class="signup_password">
-      <%= f.password_field :password, placeholder: 'パスワード' %>
-    </div>
-    <div class="signup_submit">
-      <%= f.submit '登録する' %>
-    </div>
-    <% if @user.errors.any? %>
-      <div id="error_explanation">
-        <ul>
-        <% @user.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-        </ul>
+    <h3>登録して友達の写真や動画をチェックしよう</h3>
+    <%= form_with(model: @user, local: true, url: choose_new_or_edit) do |f| %>
+      <div class="signup_email">
+        <%= f.email_field :email, placeholder: 'メールアドレス' %>
       </div>
+      <div class="signup_name">
+        <%= f.text_field :name, placeholder: 'フルネーム' %>
+      </div>
+      <div class="signup_username">
+        <%= f.text_field :user_name, placeholder: 'ユーザーネーム' %>
+      </div>
+      <div class="signup_password">
+        <%= f.password_field :password, placeholder: 'パスワード' %>
+      </div>
+      <div class="signup_submit">
+        <%= f.submit '登録する', class: 'btn_submit' %>
+      </div>
+      <% if @user.errors.any? %>
+        <div id="error_explanation">
+          <ul>
+          <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
+      <% end %>
     <% end %>
-  <% end %>
-</div>
+  </div>
 
   <div class="signin_here">
     <%= 'アカウントをお持ちですか？' %>
     <%= link_to 'ログインする', new_session_path %>
   </div>
+</div>
