ブックマーク解除のリンク指定がおかしかったので修正

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -64,7 +64,7 @@
                   <%= icon 'far', 'bookmark', class: 'space entry_addition_icon' %>
                 <% end %>
               <% else %>
-                <%= link_to bookmark_path(id: good.id), method: :delete do %>
+                <%= link_to bookmark_path(id: bookmark.id), method: :delete do %>
                   <%= icon 'fas', 'bookmark', class: 'space entry_addition_icon' %>
                 <% end %>
               <% end %>
