--- a/app/views/contact_mailer/contact_mail.html.erb
+++ b/app/views/contact_mailer/contact_mail.html.erb
@@ -1,3 +1,3 @@
 <h3>投稿が完了しました</h3>
-<p><%= image_tag @contact.image.url %></p>
+<p><%= image_tag "http://agile-fortress-57225.herokuapp.com/#{@contact.image.url}" %></p>
 <p><%= @contact.content %></p>
