--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
   <div class="signup_container">
     <div class="signup_form">
     <div class="title_logo">
-      <img src="https://fontmeme.com/permalink/200109/23a93f3d238949f77b4e6ed79577bcc1.png" class="title_logo_image">
+      <%= image_tag 'https://fontmeme.com/permalink/200109/23a93f3d238949f77b4e6ed79577bcc1.png', class: 'title_logo_image' %>
     </div>
     <h3>登録して友達の写真や動画をチェックしよう</h3>
     <%= form_with(model: @user, local: true, url: choose_new_or_edit) do |f| %>
